# ideas-sandbox

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
framework/lua/sandbox/: init.lua
framework/scripts/: framework.py
lua/sandbox/: init.lua
src/sandbox/: __main__.py
src/sandbox/Core/: ExecuteParentShell.py  FzfHandler.py  IEnvironment.py  IPipeline.py  RegisterEnvironment.py  RegisterPipeline.py
src/sandbox/Environments/: Bash.py  ConfigurableEnvironment.py  Cpp.py  Echo.py  Markdown.py  Python.py
src/sandbox/Pipelines/: Execute.py  Open.py  Reset.py  Save.py
