[project]
name = "ideas-sandbox"
version = "0.0.1"
authors = [
  { name="dcoello-dev", email="dcpulido91@gmail.com" },
]
description = "sandbox framework"
keywords = ["notes", "tool", "cli", "framework", "sandbox"]
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.scripts]
sandbox = "sandbox.__main__:main"

[project.optional-dependencies]
tests = [
  "pytest-mock==3.14.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
  ".",
  "src",
]
